# anything

./: .gitignore  Cargo.toml  README.md
.github/workflows/: AppRun  build-appimage.yaml
settings/: settings.txt
src/: exfat.rs  frontend.rs  main.rs
