[package]
name = "rs-047-anything"
version = "0.1.0"
edition = "2024"
authors = ["Davidevofficial <davidevufficial@gmail.com>"]
description = "A simple tool to search files"

[[bin]]
name="Anything"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

# [build]
# rustflags = ["-C", "target-cpu=native"]]

[dependencies]
chrono = "0.4.42"
eframe = "0.32.3"
egui_extras = "0.32.3"
